--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,32 @@
-html {background-color: #D4E6F1; color: white; font-family: Verdana, Tahoma, sans-serif;}
-.header {font-size: 40px; text-align: center; margin: 10px 50px 20px; background-color: rgba(242, 220, 202, 0.7); padding: 20px; border-radius: 50px;}
+html {
+    background-color: rgb(80, 133, 188); 
+    color: white; 
+    font-family: Verdana, Tahoma, sans-serif;}
+
+#header {
+    font-size: 40px;
+     text-align: center;
+    margin: 10px 50px 20px; 
+    background-color: rgba(40, 62, 102, 0.7); 
+    padding: 20px; 
+    border-radius: 50px;}
+
+#tuna-picture {
+    width: auto; 
+    height: 250px;}
+
+#teriyaki-picture 
+    {width: auto;
+     height: 200px;}
+
+#salmon-picture 
+{width: auto; 
+    height: 200px;}
+
+.tunadish, .chickendish, .salmondish {
+    background-color: rgba(40, 62, 102, 0.7);
+    margin-left: 5px;
+     margin-right: 40%;
+     text-align: left; 
+    border-radius: 2%;
+padding-top: 1%; }
