--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@ html {
 
 #tuna-picture {
     width: auto; 
-    height: 250px;}
+    height: 250px;
+    border-left-width: 2px;}
 
 #teriyaki-picture 
     {width: auto;
@@ -25,8 +26,10 @@ html {
 
 .tunadish, .chickendish, .salmondish {
     background-color: rgba(40, 62, 102, 0.7);
-    margin-left: 5px;
-     margin-right: 40%;
+    margin: 5px 5px;
      text-align: left; 
-    border-radius: 2%;
-padding-top: 1%; }
+    border-radius: 1%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    padding-left: 1%;
+    padding-right: 1%;}
