--- a/styles.css
+++ b/styles.css
@@ -32,4 +32,5 @@ html {
     padding-top: 1%;
     padding-bottom: 1%;
     padding-left: 1%;
-    padding-right: 1%;}
+    padding-right: 1%;
+    outline: 1px solid grey;}
