--- a/styles.css
+++ b/styles.css
@@ -9,26 +9,30 @@ html {
     margin: 10px 50px 20px; 
     background-color: rgba(40, 62, 102, 0.7); 
     padding: 20px; 
-    border-radius: 50px;}
+    border-radius: 50px;
+    box-sizing: content-box;}
 
 #tuna-picture {
     width: auto; 
-    height: 250px;
-    border-left-width: 2px;}
+    height: 200px;
+    border-left-width: 2px;
+    box-sizing: content-box;}
 
 #teriyaki-picture 
     {width: auto;
-     height: 200px;}
+     height: 150px;
+     box-sizing: content-box;}
 
 #salmon-picture 
 {width: auto; 
-    height: 200px;}
+    height: 150px;
+    box-sizing: content-box;}
 
 .tunadish, .chickendish, .salmondish {
     background-color: rgba(40, 62, 102, 0.7);
     margin: 5px 5px;
      text-align: left; 
-    border-radius: 1%;
+    border-radius: 2%;
     padding-top: 1%;
     padding-bottom: 1%;
     padding-left: 1%;
