--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ html {
     background-color: rgba(40, 62, 102, 0.7);
     margin: 5px 5px;
      text-align: left; 
-    border-radius: 2%;
+    border-radius: 50px;
     padding-top: 1%;
     padding-bottom: 1%;
     padding-left: 1%;
