--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-    background-color: rgb(80, 133, 188); 
+    background-color: #EAE3C9; 
     color: white; 
     font-family: Verdana, Tahoma, sans-serif;}
 
@@ -7,9 +7,10 @@ html {
     font-size: 40px;
      text-align: center;
     margin: 10px 50px 20px; 
-    background-color: rgba(40, 62, 102, 0.7); 
+    background-color: rgba(143, 217, 251, 0.7); 
     padding: 20px; 
-    border-radius: 50px;}
+    border-radius: 50px;
+    outline: 1px solid grey;}
 
 #tuna-picture {
     width: auto; 
@@ -25,8 +26,8 @@ html {
     height: 150px;}
 
 .tunadish, .chickendish, .salmondish {
-    background-color: rgba(40, 62, 102, 0.7);
-    margin: 5px 5px;
+    background-color: rgba(143, 217, 251, 0.7);
+    margin: 10px 50px 20px;
      text-align: left; 
     border-radius: 50px;
     padding-top: 1%;
