modified style of recipes/chicken-teriyaki.html, recipes/chickenstyle.css and styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-    background-color: #EAE3C9; 
+    background-color: antiquewhite; 
     color: white; 
     font-family: Verdana, Tahoma, sans-serif;}
 
