modified style of recipes/chickenstyle.css and styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 html {
-    background-color: antiquewhite; 
-    color: white; 
+    background-color: rgba(143, 217, 251, 0.7); 
+    color: black; 
     font-family: Verdana, Tahoma, sans-serif;}
 
 #header {
     font-size: 40px;
      text-align: center;
     margin: 10px 50px 20px; 
-    background-color: rgba(143, 217, 251, 0.7); 
+    background-color: antiquewhite; 
     padding: 20px; 
     border-radius: 50px;
-    outline: 1px solid grey;}
+    outline: 1px solid grey;
+    color: black;}
 
 #tuna-picture {
     width: auto; 
@@ -26,7 +27,7 @@ html {
     height: 150px;}
 
 .tunadish, .chickendish, .salmondish {
-    background-color: rgba(143, 217, 251, 0.7);
+    background-color: antiquewhite;
     margin: 10px 50px 20px;
      text-align: left; 
     border-radius: 50px;
