--- a/recipes/chickenstyle.css
+++ b/recipes/chickenstyle.css
@@ -9,4 +9,5 @@ width: 80%;
 background-color: antiquewhite;
 margin: auto;
 padding: 20px;
-border-radius: 5%;}
+border-radius: 5%;
+outline: 1px solid grey;}
