--- a/recipes/salmonstyle.css
+++ b/recipes/salmonstyle.css
@@ -1,10 +1,17 @@
 #webpage { background-color:  rgba(143, 217, 251, 0.7);
     font-family: Verdana, Tahoma, sans-serif;}
-#header {text-align: center;}
-.box {text-align: justify;
-    width: 80%;
+#header {font-size: 40px;
+    text-align: center;
+   margin: 10px 50px 20px; 
+   background-color: antiquewhite; 
+   padding: 20px; 
+   border-radius: 50px;
+   outline: 1px solid grey;
+   color: black;}
+.box {   text-align: justify;
+    width: 89%;
     background-color: antiquewhite;
-    margin: auto;
     padding: 30px;
     border-radius: 5%;
+    margin: 10px 50px 20px;
     outline: 1px solid grey;}
