--- a/styles.css
+++ b/styles.css
@@ -1,43 +1,58 @@
 html {
-    background-color: rgba(143, 217, 251, 0.7); 
     color: black; 
     font-family: Verdana, Tahoma, sans-serif;}
 
-#header {
+    body {
+        margin: 0;
+    }
+
+header {
     font-size: 40px;
-     text-align: center;
-    margin: 10px 50px 20px; 
-    background-color: antiquewhite; 
+     text-align: center; 
+    background-color: #BECEAA; 
     padding: 20px; 
-    border-radius: 50px;
-    outline: 1px solid grey;
-    color: black;}
+    color: black;
+    font-weight: 600;}
+
+    #linklogo {
+        text-decoration: none;
+        color: white;
+    }
+    
+    #logo {
+        width: 55px;
+        height: auto;
+    }
 
 #tuna-picture {
     width: auto; 
-    height: 150px;
+    height: 300px;
     border-left-width: 2px;}
 
 #teriyaki-picture 
     {width: auto;
-     height: 150px;}
+     height: 200px;}
 
 #salmon-picture 
 {width: auto; 
-    height: 150px;}
+    height: 200px;}
 
 .tunadish, .chickendish, .salmondish {
+    margin: 40px 0 40px 0;
     background-color: antiquewhite;
-    margin: 10px 50px 20px;
      text-align: left; 
-    border-radius: 50px;
-    padding-top: 1%;
-    padding-bottom: 1%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     padding-left: 3%;
     padding-right: 1%;
     display: block;
-    outline: 1px solid grey;
     display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    }
+
+    #linkone, #linktwo, #linkthree {
+        text-decoration: none;
     }
 
 #box1, #box2, #box3 {margin-left: 20px;}
